syntax = "proto3";
package mastermgmt.v1;
import "google/api/annotations.proto";

option go_package = "github.com/manabie-com/backend/pkg/manabuf/mastermgmt/v1;mpb";

message ImportTimeSlotRequest {
    bytes payload = 1;
    string location_id = 2;
}

message ImportTimeSlotResponse {
  message ImportTimeSlotError {
    int32 row_number = 1;
    string error = 2;
  }
  repeated ImportTimeSlotError errors = 1;
}

service TimeSlotService {
    rpc ImportTimeSlots(ImportTimeSlotRequest) returns (ImportTimeSlotResponse){
        option (google.api.http) = {
            post: "/mastermgmt/api/v1/proxy/time_slots/import",
            body: "*"
        };
    };
}
